# yahboom-robot-arm

./: .gitignore  README.md
config/: board.yaml
docs/: demo_runbook.md  getting_started.md  object_picking_status.md  setup_guide.md
dofbot_ros2_ws/src/dofbot_bringup/: CMakeLists.txt  package.xml
dofbot_ros2_ws/src/dofbot_bringup/launch/: control.launch.py  demo.launch.py  move_group.launch.py  moveit.launch.py  moveit_pc.launch.py  moveit_rviz.launch.py  pc_moveit_rviz.launch.py  pi_control.launch.py  robot.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
dofbot_ros2_ws/src/dofbot_description/: CMakeLists.txt  package.xml
dofbot_ros2_ws/src/dofbot_description/rviz/: robot.rviz
dofbot_ros2_ws/src/dofbot_description/urdf/: dofbot.urdf.xacro  dofbot_setup.urdf
dofbot_ros2_ws/src/dofbot_driver/: package.xml  setup.cfg  setup.py
dofbot_ros2_ws/src/dofbot_driver/dofbot_driver/: automation_demo.py  driver_node.py
dofbot_ros2_ws/src/dofbot_driver/launch/: dofbot.launch.py
dofbot_ros2_ws/src/dofbot_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
dofbot_ros2_ws/src/dofbot_moveit_config/config/: joint_limits.yaml  joint_limits.yaml.bak  kinematics.yaml  moveit_controllers.yaml  moveit_params.yaml  ros2_controllers.yaml  yahboom_dofbot.srdf
dofbot_ros2_ws/src/dofbot_moveit_config/launch/: control.launch.py  demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  pc_moveit_rviz.launch.py  pi_control.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
dofbot_ros2_ws/src/dofbot_ros2_control/: CMakeLists.txt  dofbot_ros2_control_plugins.xml  package.xml
dofbot_ros2_ws/src/dofbot_ros2_control/include/dofbot_ros2_control/: dofbot_topic_hardware.hpp
dofbot_ros2_ws/src/dofbot_ros2_control/src/: dofbot_topic_hardware.cpp
dofbot_ros2_ws/src/dofbot_vision/: package.xml  setup.cfg  setup.py
dofbot_ros2_ws/src/dofbot_vision/config/: picking.yaml
dofbot_ros2_ws/src/dofbot_vision/dofbot_vision/: aruco_detector.py  color_sorter.py  fake_camera_info.py  pick_from_detections.py  stream_camera.py  yolo_detector.py
dofbot_ros2_ws/src/dofbot_vision/launch/: aruco.launch.py  aruco_fake_info.launch.py  pick.launch.py  vision.launch.py  yolo.launch.py
experiments/: auto_sweep.py  tam.py
runs/detect/train/: args.yaml  results.csv
scripts/: camera.sh  container.sh  container_lib.sh  driver.sh  homography.sh  host_lib.sh  moveit.sh  run_moveit_setup.sh  setup_container.sh  sim.sh  start_arm.sh  status.sh  sync_to_pi.sh  usb.sh
scripts/one_time/: setup_container.sh
scripts/windows/: stream_camera.ps1
tools/: arm_client.py  board_config.py  calibrate_camera.py  checkerboard_gen.py  chess_game.py  compute_homography.py  gen_aruco_markers.py  gen_board.py  hover_test.py  labelme_to_yolo.py  lego_classes.txt  prepare_yolo_dataset.py  probe_protocol.py  reach_check.py  serial_wiggle.py  usb_serial.py
