<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dofbot_driver</name>
  <version>0.0.0</version>
  <description>ROS 2 Serial Driver for DOFBOT SE</description>
  <maintainer email="user@example.com">User</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>dofbot_description</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
