<?xml version="1.0"?>
<package format="3">
  <name>dofbot_ros2_control</name>
  <version>0.1.0</version>
  <description>ros2_control hardware interface for Yahboom DOFBOT (topic bridge).</description>
  <maintainer email="you@example.com">you</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>sensor_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
    <pluginlib plugin_manifest="dofbot_ros2_control_plugins.xml"/>
  </export>
</package>
